--- a/css/styles.css
+++ b/css/styles.css
@@ -319,8 +319,8 @@ about-position {
   margin-bottom: 114px;
 }
 .about-all-projects li {
-  border: 1px solid #eeeeee;
   cursor: pointer;
+  position: relative;
 }
 .about-all-projects-list {
   list-style: none;
@@ -331,14 +331,15 @@ about-position {
   padding: 0;
 }
 .about-all-projects-list figure {
+  border: 1px solid #eeeeee;
   margin: 0;
+  height: 100%;
 }
 .about-all-projects-list figcaption {
   padding: 0 24px;
   margin: 20px 0;
 }
 .about-all-projects-list figure:hover {
-  border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
