--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
   --white-transparent: rgba(255, 255, 255, 0.6);
   --white-transparent-background: rgba(255, 255, 255, 0.1);
   --grey-transparent-background: rgba(47, 48, 58, 0.8);
-
+  --blue-transparent-background: rgba(33, 150, 243, 0.9);
+  --grey-transparent-background: rgba(0, 0, 0, 0.2);
   --black-banner-background: rgba(47, 48, 58, 0.4);
   --portfolio-button: #f5f4fa;
   --social-icon: #afb1b8;
@@ -150,6 +151,58 @@ body {
   margin: 0 auto 30px auto;
   letter-spacing: 0.06em;
 }
+.backdrop {
+  background-color: var(--grey-transparent-background);
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: visibility, opacity;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+}
+.backdrop.is-hidden {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.is-hidden .modal-box {
+  transform: scale(0);
+}
+.modal-box {
+  height: 581px;
+  width: 528px;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  z-index: 1;
+  transition: transform;
+  transform: scale(1);
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+}
+.button-close {
+  background-color: rgba(255, 255, 255, 1);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: var(--black-color);
+  cursor: pointer;
+  margin-top: 8px;
+  margin-right: 8px;
+  box-sizing: border-box;
+}
 .button-main {
   color: var(--white-main-banner);
   background-color: var(--light-blue);
@@ -162,6 +215,25 @@ body {
   outline: none;
   cursor: pointer;
   border-radius: var(--button-radius);
+}
+.button-main-open {
+  background-color: var(--white-main-banner);
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+}
+.button-main-open > svg {
+  top: 8px;
+  right: 8px;
+  width: 30pxm;
+  height: 30px;
 }
 .main-description-wrapper {
   padding-top: 94px;
@@ -358,6 +430,31 @@ about-position {
   font-size: 16px;
   line-height: 1.875;
 }
+.about-projects-description {
+  background-color: var(--blue-transparent-background);
+  color: var(--white);
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  position: absolute;
+  z-index: 2;
+  margin: 0;
+  padding: 49px 45px 49px 24px;
+  width: 370px;
+  height: 294px;
+  transform: translateY(100%);
+  transition: transform 250ms var(--cubic-bezier);
+}
+.about-projects-description p {
+  margin: 0;
+}
+.about-all-projects-list figure:hover .about-projects-description,
+.about-all-projects-list figure:focus .about-projects-description {
+  transform: translateY(0);
+}
 .about-all-projects {
   box-sizing: border-box;
   display: flex;
@@ -378,14 +475,25 @@ about-position {
   padding: 0;
 }
 .about-all-projects-list figure {
+  position: relative;
   border: 1px solid #eeeeee;
   margin: 0;
   height: 100%;
-  transition: color, background-color 250ms var(--cubic-bezier);
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start;
+  overflow: hidden;
 }
 .about-all-projects-list figcaption {
-  padding: 0 24px;
-  margin: 20px 0;
+  position: relative;
+  background-color: var(--white-main-banner);
+  padding: 20px 24px;
+  z-index: 3;
+  margin: 0;
+  flex-grow: 1;
+}
+.about-all-projects-list img {
+  z-index: 1;
 }
 .about-all-projects-list figure:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
