--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  margin: 0;
+  margin: 8px;
   padding: 0;
   height: 30px;
   width: 30px;
